# projeto-Calculadora

./: README.md  main.py  telaCalculadora.ui
Tkinter-Designer-master/: requirements.txt
Tkinter-Designer-master/Tkinter-Designer-master/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
Tkinter-Designer-master/Tkinter-Designer-master/docs/: instructions.md
Tkinter-Designer-master/Tkinter-Designer-master/tests/: test_utils.py
Tkinter-Designer-master/Tkinter-Designer-master/tkdesigner/: designer.py  template.py
Tkinter-Designer-master/Tkinter-Designer-master/tkdesigner/figma/: endpoints.py  vector_elements.py
Tkinter-Designer-master/gui/: gui.py
Tkinter-Designer-master/tests/: test_cli.py  test_generation.py
Tkinter-Designer-master/tkdesigner/: cli.py  utils.py
Tkinter-Designer-master/tkdesigner/figma/: custom_elements.py  frame.py
