[tool.poetry]
name = "tkdesigner"
version = "1.0.6"
description = "CLI Package for Tkinter-Designer"
authors = ["ParthJadhav <jadhavparth99@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/ParthJadhav/Tkinter-Designer"
repository = "https://github.com/ParthJadhav/Tkinter-Designer"
documentation = "https://github.com/ParthJadhav/Tkinter-Designer"

keywords = ["tkinter", "drag-and-drop", "figma", "gui", "easy"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ParthJadhav/Tkinter-Designer/issues"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = ">=2.31,<3"
Jinja2 = ">=3.1,<4"
Pillow = ">=11,<13"
urllib3 = ">=1.26.18,<2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
flake8 = "^7.0"
pylint = "^3.0"

[tool.poetry.scripts]
tkdesigner = 'tkdesigner.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
